@@ -1,6 +1,11 @@
 2004-09-13  Elliott Hughes  <enh@acm.org>
 
-	* class.cpp: the release candidate Java 1.5's javac uses
+	* src/decl.cpp: bug #4042; constructors and default constructors
+	of strictfp classes should be strictfp themselves (JLS2 8.1.1.3).
+
+2004-09-13  Elliott Hughes  <enh@acm.org>
+
+	* src/class.cpp: the release candidate Java 1.5's javac uses
 	UTF-8 constants instead of Class constants for annotations.
 	This patch lets us work with the rt.jar from 1.5-rc.
 
